<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/background"
    tools:context=".ServiceProviderProfileActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/todo"
        android:src="@drawable/duck_horse" />

    <TextView
        android:id="@+id/nameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/imageView"
        android:fontFamily="@font/audiowide"
        android:padding="30dp"
        android:text="@string/duck_horse"
        android:textAllCaps="false"
        android:textColor="#fff"
        android:textSize="45sp" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/nameTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/audiowide"
        android:text="@string/phone_123_123_1234"
        android:textColor="#fff"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/audiowide"
        android:text="@string/rating_0_0_0_0_o"
        android:textColor="#fff"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="45dp"
        android:layout_marginTop="56dp"
        android:fontFamily="@font/audiowide"
        android:text="@string/just_a_cool_dude"
        android:textColor="#fff"
        android:textSize="15sp" />

    <Button
        android:id="@+id/editButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/textView3"
        android:background="@drawable/rectangle_border"
        android:fontFamily="@font/audiowide"
        android:layout_marginStart="45dp"
        android:layout_marginTop="30dp"
        android:padding="30dp"
        android:text="@string/edit"
        android:textColor="#fff"
        android:textSize="13sp" />




</RelativeLayout>