<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/background"
    tools:context=".UserHomeActivity">

    <EditText
        android:id="@+id/searchFilter"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/search"
        android:inputType="text"
        android:autofillHints="" tools:targetApi="o" />


    <ListView
        android:id="@+id/jobList"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:layout_marginTop="80dp" />

    <Button
        android:id="@+id/toProfileButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="60dp"
        android:background="@drawable/round_border"
        android:fontFamily="@font/audiowide"
        android:onClick="toProfile"
        android:padding="10dp"
        android:text="@string/profile"
        android:textColor="#fff"
        android:textSize="13sp" />

    <Button
        android:id="@+id/addJobButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="15dp"
        android:background="@drawable/round_border"
        android:fontFamily="@font/audiowide"
        android:onClick="toAddJob"
        android:padding="10dp"
        android:text="@string/add_job"
        android:textColor="#fff"
        android:textSize="13sp" />


</RelativeLayout>