<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/background"
    tools:context=".JobOneUser">

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/audiowide"
        android:padding="30dp"
        android:text="@string/job_one"
        android:textAllCaps="false"
        android:textColor="#fff"
        android:textSize="45sp" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/titleTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/audiowide"
        android:text="@string/_21_williams_ave_syosset_ny"
        android:textColor="#fff"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/audiowide"
        android:text="@string/_25_00"
        android:textColor="#fff"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="45dp"
        android:layout_marginTop="56dp"
        android:fontFamily="@font/audiowide"
        android:text="@string/hi_we_need_someone_to_clean_the_leaves_outside_our_house"
        android:textColor="#fff"
        android:textSize="15sp" />


    <Button
        android:id="@+id/cancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="165dp"
        android:background="@drawable/round_border"
        android:fontFamily="@font/audiowide"
        android:onClick="cancel"
        android:padding="30dp"
        android:text="Cancel"
        android:textColor="#fff"
        android:textSize="14sp" />


</RelativeLayout>